--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "coveralls": "^2.11.4",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
-    "mocha-lcov-reporter": "^1.0.0"
+    "mocha-lcov-reporter": "^1.0.0",
+    "pify": "^2.3.0"
   }
 }
