--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A module that count how much code have you committed in a git repository in a day",
   "main": "index.js",
   "scripts": {
-    "test": "nyc ava tests/*.js && nyc report --reporter=text-lcov",
+    "test": "nyc ava tests/*.js && nyc report --reporter=lcov",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -23,10 +23,8 @@
   "homepage": "https://github.com/EduardoLopes/how-much-code",
   "dependencies": {
     "colors": "^1.1.2",
-    "coveralls": "^2.11.4",
     "is-array": "^1.0.1",
     "is-number": "^2.0.2",
-    "nyc": "^3.2.2",
     "split": "^1.0.0",
     "trim": "0.0.1"
   },
@@ -37,6 +35,7 @@
   "devDependencies": {
     "ava": "^0.5.0",
     "coveralls": "^2.11.4",
+    "nyc": "^3.2.2",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "mocha-lcov-reporter": "^1.0.0",
